--- a/_site.yml
+++ b/_site.yml
@@ -31,6 +31,7 @@ navbar:
       icon: fa-twitter
     
 output_dir: "."
+exclude: [".Rproj","README.md"]
 output:
   html_document:
 #    theme: spacelab
